[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/textiletex.png" type="Texture" id=1]
[ext_resource path="res://resources/GameTheme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/BuildTabTheme.tres" type="Theme" id=3]
[ext_resource path="res://sprites/BG/IconRect.png" type="Texture" id=4]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=5]
[ext_resource path="res://sprites/BG/9rectPanel.png" type="Texture" id=6]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.454902, 0.109804, 0.109804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 222.0
theme_type_variation = "96f"
text = "Game Over"
align = 1

[node name="DeathReasonLabel" type="Label" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 1280.0
margin_bottom = 288.0
theme_type_variation = "48f"
text = "Died reason"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 1280.0
margin_bottom = 484.0
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 0.486275, 0, 1 )
margin_left = 318.0
margin_right = 638.0
margin_bottom = 192.0
rect_min_size = Vector2( 320, 192 )
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="TimeLivedLabel" type="Label" parent="VBoxContainer/HBoxContainer/NinePatchRect"]
margin_left = 28.0
margin_right = 274.0
margin_bottom = 62.0
theme_type_variation = "48f"
text = "Survived
DAYS
TIME"
align = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 0.486275, 0, 1 )
margin_left = 642.0
margin_right = 962.0
margin_bottom = 192.0
rect_min_size = Vector2( 320, 192 )
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="RecordLivedLabel" type="Label" parent="VBoxContainer/HBoxContainer/NinePatchRect2"]
margin_left = 28.0
margin_right = 274.0
margin_bottom = 62.0
theme_type_variation = "48f"
text = "Record
DAYS
TIME"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 488.0
margin_right = 1280.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 0.129412, 1, 0, 1 )
margin_top = 540.0
margin_right = 1280.0
margin_bottom = 668.0
rect_min_size = Vector2( 256, 128 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -20.5
margin_right = 77.0
margin_bottom = 20.5
theme = ExtResource( 3 )
text = "New Game"

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 672.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_NewGameButton_pressed"]
